// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyTemplateDetailsView component renders as expected -- no related object field 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template details
      </h2>
      <dl
        className="pf-c-description-list"
      >
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Name
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy-gatekeeper-admission
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Cluster
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              calamari
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Kind
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              ConfigurationPolicy
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              API groups
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy.open-cluster-management.io/v1
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Compliant
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              NonCompliant
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Details
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
            </div>
          </dd>
        </div>
      </dl>
    </div>
    <div
      className="yaml"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template yaml
      </h2>
      <div>
        <div
          className="yamlEditorContainer"
        >
          <div
            className="react-monaco-editor-container"
            style={
              Object {
                "height": "500px",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <h2
      className="pf-c-title pf-m-xl title"
    >
      Related resources
    </h2>
    <div
      className="pattern-fly-table"
    >
      <table
        aria-label="Sortable Table"
        className="pf-c-table pf-m-grid-md"
        data-ouia-component-id={17}
        data-ouia-component-type="PF4/Table"
        data-ouia-safe={true}
        role="grid"
      >
        <thead
          className="pattern-fly-table-header"
        >
          <tr>
            <th
              aria-sort="ascending"
              className="pf-c-table__sort pf-m-selected pf-m-wrap"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Name
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Namespace
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Kind
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    API groups
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Compliant
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Reason
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              className=""
              data-key={6}
              data-label=""
              onMouseEnter={[Function]}
            >
              
            </th>
          </tr>
        </thead>
        <tbody
          className="pattern-fly-table-body"
        />
      </table>
      <div
        className="pf-c-empty-state pf-m-sm pattern-fly-table-empty-state"
      >
        <div
          className="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            aria-labelledby={null}
            className="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              transform=""
            />
          </svg>
          <h2
            className="pf-c-title pf-m-md"
          >
            No results found
          </h2>
        </div>
      </div>
      <div
        className="pf-c-pagination pf-m-bottom"
        data-ouia-component-id={18}
        data-ouia-component-type="PF4/Pagination"
        data-ouia-safe={true}
        id="pagination-options-menu-bottom-2"
      >
        <div
          className="pf-c-options-menu pf-m-top"
          data-ouia-component-id={19}
          data-ouia-component-type="PF4/PaginationOptionsMenu"
          data-ouia-safe={true}
        >
          <div
            className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
          >
            <span
              className="pf-c-options-menu__toggle-text"
            >
              <b>
                0
                 - 
                0
              </b>
               
              of 
              <b>
                0
              </b>
               
              
            </span>
            <button
              aria-expanded={false}
              aria-label="Items per page"
              className="  pf-c-options-menu__toggle-button"
              disabled={true}
              id="pagination-options-menu-bottom-toggle-2"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span
                className="pf-c-options-menu__toggle-button-icon"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <nav
          aria-label="Pagination"
          className="pf-c-pagination__nav"
        >
          <div
            className="pf-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled={true}
              aria-label="Go to first page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id={20}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to previous page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id={21}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-page-select"
          >
            <input
              aria-label="Current page"
              className="pf-c-form-control"
              disabled={true}
              max={0}
              min={1}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="number"
              value={0}
            />
            <span
              aria-hidden="true"
            >
              of 
              0
            </span>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to next page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="next"
              data-ouia-component-id={22}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled={true}
              aria-label="Go to last page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="last"
              data-ouia-component-id={23}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected -- relatedObjects field is [] 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template details
      </h2>
      <dl
        className="pf-c-description-list"
      >
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Name
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy-gatekeeper-admission
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Cluster
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              calamari
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Kind
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              ConfigurationPolicy
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              API groups
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy.open-cluster-management.io/v1
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Compliant
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              NonCompliant
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Details
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
            </div>
          </dd>
        </div>
      </dl>
    </div>
    <div
      className="yaml"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template yaml
      </h2>
      <div>
        <div
          className="yamlEditorContainer"
        >
          <div
            className="react-monaco-editor-container"
            style={
              Object {
                "height": "500px",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <h2
      className="pf-c-title pf-m-xl title"
    >
      Related resources
    </h2>
    <div
      className="pattern-fly-table"
    >
      <table
        aria-label="Sortable Table"
        className="pf-c-table pf-m-grid-md"
        data-ouia-component-id={10}
        data-ouia-component-type="PF4/Table"
        data-ouia-safe={true}
        role="grid"
      >
        <thead
          className="pattern-fly-table-header"
        >
          <tr>
            <th
              aria-sort="ascending"
              className="pf-c-table__sort pf-m-selected pf-m-wrap"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Name
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Namespace
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Kind
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    API groups
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Compliant
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Reason
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              className=""
              data-key={6}
              data-label=""
              onMouseEnter={[Function]}
            >
              
            </th>
          </tr>
        </thead>
        <tbody
          className="pattern-fly-table-body"
        />
      </table>
      <div
        className="pf-c-empty-state pf-m-sm pattern-fly-table-empty-state"
      >
        <div
          className="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            aria-labelledby={null}
            className="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              transform=""
            />
          </svg>
          <h2
            className="pf-c-title pf-m-md"
          >
            No results found
          </h2>
        </div>
      </div>
      <div
        className="pf-c-pagination pf-m-bottom"
        data-ouia-component-id={11}
        data-ouia-component-type="PF4/Pagination"
        data-ouia-safe={true}
        id="pagination-options-menu-bottom-1"
      >
        <div
          className="pf-c-options-menu pf-m-top"
          data-ouia-component-id={12}
          data-ouia-component-type="PF4/PaginationOptionsMenu"
          data-ouia-safe={true}
        >
          <div
            className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
          >
            <span
              className="pf-c-options-menu__toggle-text"
            >
              <b>
                0
                 - 
                0
              </b>
               
              of 
              <b>
                0
              </b>
               
              
            </span>
            <button
              aria-expanded={false}
              aria-label="Items per page"
              className="  pf-c-options-menu__toggle-button"
              disabled={true}
              id="pagination-options-menu-bottom-toggle-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span
                className="pf-c-options-menu__toggle-button-icon"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <nav
          aria-label="Pagination"
          className="pf-c-pagination__nav"
        >
          <div
            className="pf-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled={true}
              aria-label="Go to first page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id={13}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to previous page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id={14}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-page-select"
          >
            <input
              aria-label="Current page"
              className="pf-c-form-control"
              disabled={true}
              max={0}
              min={1}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="number"
              value={0}
            />
            <span
              aria-hidden="true"
            >
              of 
              0
            </span>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to next page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="next"
              data-ouia-component-id={15}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled={true}
              aria-label="Go to last page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="last"
              data-ouia-component-id={16}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template details
      </h2>
      <dl
        className="pf-c-description-list"
      >
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Name
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy-gatekeeper-admission
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Cluster
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              calamari
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Kind
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              ConfigurationPolicy
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              API groups
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              policy.open-cluster-management.io/v1
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Compliant
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              NonCompliant
            </div>
          </dd>
        </div>
        <div
          className="pf-c-description-list__group"
        >
          <dt
            className="pf-c-description-list__term"
          >
            <span
              className="pf-c-description-list__text"
            >
              Details
            </span>
          </dt>
          <dd
            className="pf-c-description-list__description"
          >
            <div
              className="pf-c-description-list__text"
            >
              [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
            </div>
          </dd>
        </div>
      </dl>
    </div>
    <div
      className="yaml"
    >
      <h2
        className="pf-c-title pf-m-xl title"
      >
        Template yaml
      </h2>
      <div>
        <div
          className="yamlEditorContainer"
        >
          <div
            className="react-monaco-editor-container"
            style={
              Object {
                "height": "500px",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <h2
      className="pf-c-title pf-m-xl title"
    >
      Related resources
    </h2>
    <div
      className="pattern-fly-table"
    >
      <table
        aria-label="Sortable Table"
        className="pf-c-table pf-m-grid-md"
        data-ouia-component-id={0}
        data-ouia-component-type="PF4/Table"
        data-ouia-safe={true}
        role="grid"
      >
        <thead
          className="pattern-fly-table-header"
        >
          <tr>
            <th
              aria-sort="ascending"
              className="pf-c-table__sort pf-m-selected pf-m-wrap"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Name
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Namespace
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Kind
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    API groups
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Compliant
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              aria-sort="none"
              className="pf-c-table__sort pf-m-wrap"
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
              scope="col"
            >
              <button
                className="pf-c-table__button"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="pf-c-table__button-content"
                >
                  <span
                    className="pf-c-table__text"
                    onMouseEnter={[Function]}
                  >
                    Reason
                  </span>
                  <span
                    className="pf-c-table__sort-indicator"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        transform=""
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </th>
            <th
              className=""
              data-key={6}
              data-label=""
              onMouseEnter={[Function]}
            >
              
            </th>
          </tr>
        </thead>
        <tbody
          className="pattern-fly-table-body"
        >
          <tr
            className=""
            data-ouia-component-id={1}
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe={true}
            hidden={false}
            onMouseDown={[Function]}
          >
            <td
              className="pf-m-break-word"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
            >
              openshift-multus.162c73ad488032d5
            </td>
            <td
              className=""
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
            >
              gatekeeper-system
            </td>
            <td
              className=""
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
            >
              events
            </td>
            <td
              className="pf-m-break-word"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
            >
              /v1
            </td>
            <td
              className=""
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
            >
              NonCompliant
            </td>
            <td
              className=""
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
            >
              Resource found but not expected
            </td>
            <td
              className=""
              data-key={6}
              onMouseEnter={[Function]}
            >
              <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c73ad488032d5"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>
            </td>
          </tr>
          <tr
            className=""
            data-ouia-component-id={2}
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe={true}
            hidden={false}
            onMouseDown={[Function]}
          >
            <td
              className="pf-m-break-word"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
            >
              openshift-multus.162c749621995399
            </td>
            <td
              className=""
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
            >
              gatekeeper-system
            </td>
            <td
              className=""
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
            >
              events
            </td>
            <td
              className="pf-m-break-word"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
            >
              /v1
            </td>
            <td
              className=""
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
            >
              NonCompliant
            </td>
            <td
              className=""
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
            >
              Resource found but not expected
            </td>
            <td
              className=""
              data-key={6}
              onMouseEnter={[Function]}
            >
              <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c749621995399"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>
            </td>
          </tr>
          <tr
            className=""
            data-ouia-component-id={3}
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe={true}
            hidden={false}
            onMouseDown={[Function]}
          >
            <td
              className="pf-m-break-word"
              data-key={0}
              data-label="Name"
              onMouseEnter={[Function]}
            >
              openshift-multus.162c757efd7ebb62
            </td>
            <td
              className=""
              data-key={1}
              data-label="Namespace"
              onMouseEnter={[Function]}
            >
              gatekeeper-system
            </td>
            <td
              className=""
              data-key={2}
              data-label="Kind"
              onMouseEnter={[Function]}
            >
              events
            </td>
            <td
              className="pf-m-break-word"
              data-key={3}
              data-label="API groups"
              onMouseEnter={[Function]}
            >
              /v1
            </td>
            <td
              className=""
              data-key={4}
              data-label="Compliant"
              onMouseEnter={[Function]}
            >
              NonCompliant
            </td>
            <td
              className=""
              data-key={5}
              data-label="Reason"
              onMouseEnter={[Function]}
            >
              Resource found but not expected
            </td>
            <td
              className=""
              data-key={6}
              onMouseEnter={[Function]}
            >
              <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="pf-c-pagination pf-m-bottom"
        data-ouia-component-id={4}
        data-ouia-component-type="PF4/Pagination"
        data-ouia-safe={true}
        id="pagination-options-menu-bottom-0"
      >
        <div
          className="pf-c-options-menu pf-m-top"
          data-ouia-component-id={5}
          data-ouia-component-type="PF4/PaginationOptionsMenu"
          data-ouia-safe={true}
        >
          <div
            className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
          >
            <span
              className="pf-c-options-menu__toggle-text"
            >
              <b>
                1
                 - 
                3
              </b>
               
              of 
              <b>
                3
              </b>
               
              
            </span>
            <button
              aria-expanded={false}
              aria-label="Items per page"
              className="  pf-c-options-menu__toggle-button"
              disabled={false}
              id="pagination-options-menu-bottom-toggle-0"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span
                className="pf-c-options-menu__toggle-button-icon"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <nav
          aria-label="Pagination"
          className="pf-c-pagination__nav"
        >
          <div
            className="pf-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled={true}
              aria-label="Go to first page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id={6}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to previous page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id={7}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-page-select"
          >
            <input
              aria-label="Current page"
              className="pf-c-form-control"
              disabled={true}
              max={1}
              min={1}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="number"
              value={1}
            />
            <span
              aria-hidden="true"
            >
              of 
              1
            </span>
          </div>
          <div
            className="pf-c-pagination__nav-control"
          >
            <button
              aria-disabled={true}
              aria-label="Go to next page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="next"
              data-ouia-component-id={8}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <div
            className="pf-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled={true}
              aria-label="Go to last page"
              className="pf-c-button pf-m-plain pf-m-disabled"
              data-action="last"
              data-ouia-component-id={9}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={true}
              onClick={[Function]}
              tabIndex={null}
              type="button"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  transform=""
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
